--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -22,6 +22,47 @@ ja:
   time:
     formats:
       short: "%Y/%m/%d %H:%M"
+      long: "%Y/%m/%d %H:%M:%S"
+  datetime:
+    distance_in_words:
+      about_x_hours:
+        one: 約1時間
+        other: 約%{count}時間
+      about_x_months:
+        one: 約1ヶ月
+        other: 約%{count}ヶ月
+      about_x_years:
+        one: 約1年
+        other: 約%{count}年
+      almost_x_years:
+        one: 1年弱
+        other: "%{count}年弱"
+      half_a_minute: 30秒前
+      less_than_x_minutes:
+        one: 1分以内
+        other: "%{count}分未満"
+      less_than_x_seconds:
+        one: 1秒以内
+        other: "%{count}秒未満"
+      over_x_years:
+        one: 1年以上
+        other: "%{count}年以上"
+      x_days:
+        one: 1日前
+        other: "%{count}日前"
+      x_minutes:
+        one: 1分前
+        other: "%{count}分前"
+      x_months:
+        one: 1ヶ月前
+        other: "%{count}ヶ月前"
+      x_seconds:
+        one: 1秒前
+        other: "%{count}秒前"
+  errors:
+    format: "%{attribute} %{message}"
+    messages:
+      blank: "を入力してください"
       too_long: "は%{count}文字以内で入力してください"
       too_short: "は%{count}文字以上で入力してください"
       not_a_number: "は数値で入力してください"
